--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@ body{
 /*nav desing*/
 
 header .wrapper {
-    
+   
+    max-width: 100%;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -26,12 +27,27 @@ header .wrapper {
 
 /* text desing*/
 
-.heading{
+.text{
     text-align: center;
+    margin-bottom: 10px;
 }
-.paraghaph{
-    text-align: center;
-}
+.btn{
+   display:inline-block;
+    padding:0.5em;
+    border:0.16em solid #FFFFFF;
+    
+    text-decoration:none;
+    text-transform:uppercase;
+    font-weight:400;
+    color:#ffffff;
+    background-color: coral;
+    text-align:center;
+    transition: all 0.15s;
+    }
+    .btn:hover{
+    color:#e46109;
+    border-color:#DDDDDD;
+    }
 
 /**header img*/
 .img{
@@ -76,13 +92,17 @@ header .wrapper {
         display: grid;
         grid-template-columns: repeat(1,1fr);
         font-size: 10px;
-        margin-right: 
-        20px;
+        margin-right: 20px;
+        
     }
     .logo{
         font-size: 10px;
+    
     }
-
+    .btn{
+        font-size: 10px;
+        
+    }
     .heading, .paraghaph{
         font-size: 0.5em;
     }
