--- a/style.css
+++ b/style.css
@@ -1,14 +1,22 @@
-body{
+body {
     margin: 0;
 }
+
 .main {
     background-color: rgba(255, 144, 14, 0.1);
-   
+
 }
+
 /*nav desing*/
+hr {
+    border: 1px solid #cf6f15;
+    height: 60px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
 
 header .wrapper {
-   
+
     max-width: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -16,8 +24,9 @@ header .wrapper {
     justify-content: space-evenly;
     padding: 2%;
 }
-.list{
- 
+
+.list {
+
     list-style-type: none;
     display: flex;
     flex-direction: row;
@@ -27,97 +36,317 @@ header .wrapper {
 
 /* text desing*/
 
-.text{
+.text {
     text-align: center;
     margin-bottom: 10px;
 }
-.btn{
-   display:inline-block;
-    padding:0.5em;
-    border:0.16em solid #FFFFFF;
-    text-decoration:none;
-    text-transform:uppercase;
-    font-weight:400;
-    color:#ffffff;
+
+/*button header*/
+.btn {
+    display: inline-block;
+    padding: 0.5em;
+    border: 0.16em solid #FFFFFF;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: 400;
+    color: #ffffff;
     background-color: coral;
-    text-align:center;
+    text-align: center;
     transition: all 0.15s;
-    }
-    .btn:hover{
-    color:#e46109;
-    border-color:#DDDDDD;
-    }
+}
+
+.btn:hover {
+    color: #e46109;
+    border-color: #DDDDDD;
+}
 
 /**header img*/
-.img{
-  text-align: center;
-  max-width: 100%;
-  height: auto;
+.img {
+    text-align: center;
+    max-width: 100%;
+    height: auto;
 }
 
 /* 2nd section*/
-.container{
+.container {
     margin-top: 50px;
-   text-align: center;
-   width: 50%;
-   margin-left:20% ;
-}
-.container1{
-    display: flex;
-    gap: 10px;
-   justify-content: center;
+    text-align: center;
+    width: 50%;
+    margin-left: 20%;
 }
 
-.one{
+.container1 {
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+}
+
+.one {
     color: #727272;
 }
-.two{
+
+.two {
     color: chocolate;
 }
 
-.item{
+.item {
     margin-left: 20%;
     margin-top: 90%;
     font-size: 20px;
     font-weight: 700;
 }
+
+
+/*  resume-container*/
+.heading {
+    margin: 0;
+}
+
+.resume-container {
+    display: flex;
+    margin-top: 5%;
+    margin-left: 15%;
+    gap: 5%;
+}
+
+.resume-item {
+    display: grid;
+    grid-template-rows: 1fr;
+    margin: 20px;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.06);
+    border-radius: 8px;
+
+}
+
+/*architect1*/
+.btn1 {
+
+    padding: 1em;
+    border: 0.16em solid #FFFFFF;
+    text-decoration: none;
+    font-weight: 400;
+    color: #ffffff;
+    background-color: coral;
+    text-align: center;
+    transition: all 0.15s;
+}
+
+.btn1:hover {
+    color: #e46109;
+    border-color: #DDDDDD;
+}
+
+/*icon-container*/
+.icon-container {
+    margin-left: 15%;
+}
+
+.icon-section {
+    display: flex;
+    justify-content: center;
+    gap: 3%;
+    margin-right: 3%;
+    transition: border 5s ease-in-out;
+}
+.icon:hover {
+    border: 3px solid rgb(224, 171, 24);
+  }
+.icon {
+    margin: 0;
+    width: 150px;
+    height: 150px;
+    border-radius: 8px;
+    text-align: center;
+    border: 1px solid rgb(247, 182, 5);
+    padding: 1%;
+
+}
+
+.icon-head {
+    text-align: center;
+}
+
+/*Sponspser section*/
+.S-container {
+
+    margin-left: 15%;
+    text-align: center;
+}
+
+.S-section {
+    display: flex;
+    justify-content: center;
+    gap: 5%;
+    margin-right: 3%;
+
+}
+
+.S {
+    text-align: center;
+
+}
+
+.S img {
+    cursor: pointer;
+    filter: grayscale(100%);
+}
+
+.S img:hover {
+    filter: opacity(2);
+}
+
+.s-head {
+    margin-top: 5%;
+}
+
+/**Extra section*/
+.staff-name {
+    text-align: center;
+    margin-top: 50px;
+}
+
+.staff-container {
+    margin-top: 1%;
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.06);
+    border-radius: 8px;
+
+
+}
+
+.img2 {
+    height: 400px;
+    margin-top: 30px;
+}
+
+.details {
+    margin-top: 20%;
+
+}
+
+.staff {
+    background-color: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(143, 148, 147, 0.06);
+    border-radius: 5px;
+    padding: 30px;
+
+}
+
+.staff-tittle {
+    font-weight: 800;
+}
+
+/*Footer*/
+.footer {
+    text-align: center;
+    margin-left: 40px;
+    margin-right: 50px;
+    background-color: #e0af8f;
+    padding: 0.5%;
+    margin-bottom: 2%;
+}
+
 @media screen and (max-width: 576px) {
-    .wrapper{
-        display: none;
-        width: 100%;
-        
+    header .wrapper {
+        max-width: 100%;
+        display: flex;
+        /* flex-wrap: wrap; */
+        align-items: center;
+        justify-content: space-evenly;
+        padding: 2%;
+        flex-direction: column;
     }
-    .list{
+
+    .list {
         display: grid;
-        grid-template-columns: repeat(1,1fr);
+        grid-template-columns: repeat(1, 1fr);
         font-size: 10px;
         margin-right: 20px;
-        
+
     }
-    .logo{
+
+    .logo {
         font-size: 10px;
-    
+
     }
-    .btn{
+
+    .btn {
         font-size: 10px;
-        
+
     }
-    .heading, .paraghaph{
+
+    .heading,
+    .paraghaph {
         font-size: 0.5em;
     }
+
     img {
         max-width: 100%;
-      }
-     .container1{
+    }
+
+    .container1 {
         display: block;
         max-width: 100%;
         height: auto;
-     }
-     .item{
+    }
+
+    .item {
         margin-top: 20%;
         font-size: 10px;
         font-weight: 700;
         text-align: center;
-     }
+    }
+
+    hr {
+        display: none;
+    }
+
+    .resume-container {
+        display: block;
+        max-width: 100%;
+        height: auto;
+    }
+
+    .resume-item {
+        font-size: 1em;
+    }
+
+    .icon-section {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        margin-bottom: 10%;
+    }
+
+    .S img {
+        cursor: pointer;
+        filter: grayscale(100%);
+    }
+
+    .S img:hover {
+        filter: opacity(2);
+    }
+
+    .S-section {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        height: 50px;
+        width: 50px;
+    }
+
+    .s-head {
+        margin-top: 40%;
+    }
+
+    .staff-container {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .details {
+        margin-top: 2%;
+        padding: 3%;
+    }
 }
-    
